# flaskcrudapi

./: README.md  pyproject.toml
instance/: db.sqlite
src/: app.py  db.py
src/controllers/: user.py
